# Fortuna

./: .gitignore  CODE_OF_CONDUCT.md  PUBLISHING.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
assets/: index-VJk4SjQy.css  index-sapy0m7G.js  sim.worker-BUbroZVK.js
scripts/: make-icon.mjs
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ai/: client.ts  heuristic.ts  schema.ts
src/components/: About.tsx  Coach.tsx  Collections.tsx  Controls.tsx  ErrorBoundary.tsx  FanChart.tsx  ProfileBar.tsx  Results.tsx  Toolbar.tsx  format.ts  ui.tsx
src/engine/: advice.ts  random.ts  sim.worker.ts  simulate.ts  types.ts
src/state/: profiles.ts  scenario.ts  store.tsx  useCoach.ts  useSimulation.ts
tests/: client.test.ts  heuristic.test.ts  worker.test.ts
worker/: README.md  wrangler.toml
worker/src/: index.js
