[package]
name = "fortuna"
version = "0.1.0"
description = "Fortuna — financial future simulator"
authors = ["Bruce McGinley"]
edition = "2021"
rust-version = "1.77.2"

# The library the binary calls into; keeps room for future mobile targets.
[lib]
name = "fortuna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Smaller, faster release binaries for a UI-only app.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
